finished but strange